--- a/views/pageHome/homePage.pug
+++ b/views/pageHome/homePage.pug
@@ -10,7 +10,7 @@ block conten
 			li 
 				a(href="") Home
 			li 
-				a(href="") Active
+				a(href="/bangxephang") Bang xep hang
 			li 
 				a(href="") Help
 			li 
@@ -26,7 +26,7 @@ block conten
 					li 
 						a(href="") Home
 					li 
-						a(href="") Active
+						a(href="/bangxephang") Bang xep hang
 					li 
 						a(href="") Help
 					li 
