--- a/views/tiemKim/pageTim.pug
+++ b/views/tiemKim/pageTim.pug
@@ -1,4 +1,5 @@
-h1 tim kiem
-	each posts in bigCities
-		p=posts.nameXephang
-		img(src=posts.imageXephang)
+form
+  .form-group
+    label(for='exampleInputEmail1') Email address
+    input#exampleInputEmail1.form-control(type='text' name="timname")
+  button.btn.btn-primary(type='submit') Submit
