--- a/views/pageXephang/XephangPage.pug
+++ b/views/pageXephang/XephangPage.pug
@@ -1,5 +1,93 @@
-form(action="/bangxephang", method="POST")
-  .form-group
-    label(for='exampleInputEmail1') Email address
-    input#exampleInputEmail1.form-control(type='text' name="timname")
-  button.btn.btn-primary(type='submit') Submit
+extends ../layOut/homeComeon
+
+block conten
+	.loader.loader-black.loader-1(id="fixeds")
+	.meau_mobi(id="showMeau")
+		i.fas.fa-ellipsis-v
+	.show_meau(id="mobie_on")
+		i.fas.fa-times
+		ul
+			li 
+				a(href="") Home
+			li 
+				a(href="/bangxephang") Bang xep hang
+			li 
+				a(href="") Help
+			li 
+				a(href="") Goo
+	.wapper_home.not(id="fixed")
+	
+		.herder_img
+			.wapper_baner
+				.img_baner
+		.wapper_meau
+			.meau_nav
+				ul
+					li 
+						a(href="") Home
+					li 
+						a(href="/bangxephang") Bang xep hang
+					li 
+						a(href="") Help
+					li 
+						a(href="") Goo
+		.container-fluid(style="background:#f7f9fb; padding-top:48px;")
+			.row
+				.col-12
+					
+					.wapper_header
+						.row
+							div.col-xs-12.col-sm-12.col-md-12.col-lg-12.col-12-custom
+								div.row
+								each post in xephangItems
+									div.col-xs-12.col-sm-12.col-md-6.col-lg-6.postCal
+										div.postMeau
+											img(src=post.imageXephang)
+											
+											div.row.wapper_img_conten
+												div.col-12.col-sm-12.col-md-12.col-lg-12.col-xl-12
+													a(href=`/post/xephang/${post.id}`)
+														h4.display-14=post.nameXephang
+		script(type='text/javascript').
+			function showMeau(){
+				var show = document.getElementById("showMeau")
+				var meauOn = document.getElementById("mobie_on")
+				var fixed = document.getElementById("fixed")
+				var fixeds = document.getElementById("fixeds")
+				show.addEventListener("click", showMeaus)
+				meauOn.addEventListener("click", closeMeau)
+				setTimeout(function(){ fixed.classList.remove('not') }, 1000);
+				setTimeout(function(){ fixeds.classList.add('not') }, 1000);
+
+				function showMeaus(){
+					console.log("hh")
+					meauOn.style.left = "0"
+					fixed.classList.add('of')
+				}
+				function closeMeau(){
+					meauOn.style.left = "-310px"
+					fixed.classList.remove('of')
+				}
+			}
+			showMeau();
+			function reload(){
+				if(
+					getStorage('loaded') == '' 
+					|| getStorage('loaded') == '0'
+				){
+					setStorage('loaded', '1');
+					window.location.reload();
+					return true;
+				}else{
+					setStorage('loaded', '0');
+					return true;
+				}
+			}
+			function setStorage(name, value){
+				return sessionStorage.setItem(name, value);
+			}
+			function getStorage(name){
+				return sessionStorage.getItem(name) || '';
+			}
+			showMeau();
+			setTimeout(reload, 500);
