--- a/views/layOut/homeComeon.pug
+++ b/views/layOut/homeComeon.pug
@@ -1,8 +1,15 @@
 html
     head
         link(rel="stylesheet" href="/style/pageHome.css")
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css")
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.carousel.css")
         link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css")
         script(src="https://code.jquery.com/jquery-3.4.1.slim.min.js")
+
+        script(src="https://code.jquery.com/jquery-1.11.1.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/owl.carousel.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js")
+            
         script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js")
         script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js")
         script(src='https://kit.fontawesome.com/c539bfea41.js', crossorigin='anonymous')
