--- a/public/style/Layout/_home.scss
+++ b/public/style/Layout/_home.scss
@@ -29,7 +29,22 @@ body {
   margin: auto;
   transition: 0.2s;
   padding-left: 20px;
-  padding-right: 20px; }
+  padding-right: 20px; 
+  .go_logo{
+  	padding: 35px 0;
+  	width: 100%;
+  	 i{
+	  	color: #a2b8b1;
+	  	font-size: 32px;
+	  }
+	  span{
+	  	font-size: 20px;
+	  	padding: 0 20px;
+	  	font-weight: 600;
+	  }
+  }
+ 
+}
 
 .wapper_meau {
   text-align: center;
@@ -283,7 +298,26 @@ body {
   z-index: 2;
 }
 
+.wapper_conten_xephang{
+	padding-bottom: 30px;
+	position: relative;
+	img{
+		width: 100%;
+		height: 300px;
+	}
+	p{
+	    top: 71%;
+	    width: 100%;
+	    position: absolute;
+	    background: #2223235c;
+	    color: #fff;
+	  }
+	b{
+	  	top: 70%;
+	  	padding: 0 10px;
 
+	  }
+}
 
 @include responsive_sm{
 
@@ -310,6 +344,33 @@ body {
 	}
 	.owl-item{
 		margin-right: 10px !important;
+	}
+	.col-3{
+		padding-right: 2px !important;;
+    	padding-left: 2px !important;;
+	}
+	.wapper_conten_xephang{
+	    img {
+	    	height: 103px;
+	    	&:hover:before {
+			  content: "";
+			  background: rgba(0, 0, 0, 0.5);
+			  position: absolute;
+			  height: 100%;
+			  width: 100%;
+			  z-index: 1;
+			}
+		}
+		p{
+			top: 50%;
+			font-size: 7px;
+		}
+		b{
+			font-size: 10px;
+			padding: 0;
+		}
+
+
 	}
 }
 
