--- a/public/style/Layout/_home.scss
+++ b/public/style/Layout/_home.scss
@@ -297,10 +297,16 @@ body {
   display: block;
   z-index: 2;
 }
-
+.waper_xephang{
+	.go_logo{
+	  	padding: 35px 0;
+	  	width: 100%;
+	 }
+}
 .wapper_conten_xephang{
 	padding-bottom: 30px;
 	position: relative;
+
 	img{
 		width: 100%;
 		height: 300px;
@@ -351,7 +357,7 @@ body {
 	}
 	.wapper_conten_xephang{
 	    img {
-	    	height: 103px;
+	    	height: 127px;
 	    	&:hover:before {
 			  content: "";
 			  background: rgba(0, 0, 0, 0.5);
@@ -362,7 +368,7 @@ body {
 			}
 		}
 		p{
-			top: 50%;
+			top: 56%;
 			font-size: 7px;
 		}
 		b{
