--- a/public/style/Layout/_home.scss
+++ b/public/style/Layout/_home.scss
@@ -298,9 +298,20 @@ body {
   z-index: 2;
 }
 .waper_xephang{
+	max-width: 938px;
+    margin: auto;
 	.go_logo{
-	  	padding: 35px 0;
+	  	padding: 35px 19px;
 	  	width: 100%;
+	  	i{
+		  	color: red;
+		  	font-size: 32px;
+		  }
+		  span{
+		  	font-size: 20px;
+		  	padding: 0 20px;
+		  	font-weight: 600;
+		  }
 	 }
 }
 .wapper_conten_xephang{
@@ -312,18 +323,33 @@ body {
 		height: 300px;
 	}
 	p{
-	    top: 71%;
+	    top: 67%;
 	    width: 100%;
 	    position: absolute;
 	    background: #2223235c;
 	    color: #fff;
+	    height: 48px;
 	  }
 	b{
-	  	top: 70%;
+	  	top: 102%;
+	  	position: absolute;
 	  	padding: 0 10px;
-
+	    font-size: 11px;
+	    background: #2223235c;
+	    width: 100%;
+	    height: 31px;
+	    color: aqua;
+	    display: block;
 	  }
 }
+.wapper_conten_xephang:hover:before {
+	  content: "";
+	  background: rgba(0, 0, 0, 0.5);
+	  position: absolute;
+	  height: 91%;
+	  width: 100%;
+	  z-index: 1;
+	}
 
 @include responsive_sm{
 
@@ -358,28 +384,26 @@ body {
 	.wapper_conten_xephang{
 	    img {
 	    	height: 127px;
-	    	&:hover:before {
-			  content: "";
-			  background: rgba(0, 0, 0, 0.5);
-			  position: absolute;
-			  height: 100%;
-			  width: 100%;
-			  z-index: 1;
-			}
+	    	
 		}
 		p{
-			top: 56%;
+			top: 51%;
+			height: 31px;	
 			font-size: 7px;
 		}
 		b{
 			font-size: 10px;
 			padding: 0;
+			height: 15px;
 		}
-
+		
 
 	}
 }
 
+.wapper_conten_xephang:hover:before {
+		  height:80%;
+		}
 @include responsive_lg{
     
 }
