--- a/public/style/pageHome.css
+++ b/public/style/pageHome.css
@@ -271,9 +271,19 @@ body {
   display: block;
   z-index: 2; }
 
-.waper_xephang .go_logo {
-  padding: 35px 0;
-  width: 100%; }
+.waper_xephang {
+  max-width: 938px;
+  margin: auto; }
+  .waper_xephang .go_logo {
+    padding: 35px 19px;
+    width: 100%; }
+    .waper_xephang .go_logo i {
+      color: red;
+      font-size: 32px; }
+    .waper_xephang .go_logo span {
+      font-size: 20px;
+      padding: 0 20px;
+      font-weight: 600; }
 
 .wapper_conten_xephang {
   padding-bottom: 30px;
@@ -282,14 +292,30 @@ body {
     width: 100%;
     height: 300px; }
   .wapper_conten_xephang p {
-    top: 71%;
+    top: 67%;
     width: 100%;
     position: absolute;
     background: #2223235c;
-    color: #fff; }
+    color: #fff;
+    height: 48px; }
   .wapper_conten_xephang b {
-    top: 70%;
-    padding: 0 10px; }
+    top: 102%;
+    position: absolute;
+    padding: 0 10px;
+    font-size: 11px;
+    background: #2223235c;
+    width: 100%;
+    height: 31px;
+    color: aqua;
+    display: block; }
+
+.wapper_conten_xephang:hover:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  height: 91%;
+  width: 100%;
+  z-index: 1; }
 
 @media (max-width: 768px) {
   .owl-next {
@@ -316,19 +342,17 @@ body {
 
   .wapper_conten_xephang img {
     height: 127px; }
-    .wapper_conten_xephang img:hover:before {
-      content: "";
-      background: rgba(0, 0, 0, 0.5);
-      position: absolute;
-      height: 100%;
-      width: 100%;
-      z-index: 1; }
   .wapper_conten_xephang p {
-    top: 56%;
+    top: 51%;
+    height: 31px;
     font-size: 7px; }
   .wapper_conten_xephang b {
     font-size: 10px;
-    padding: 0; } }
+    padding: 0;
+    height: 15px; } }
+.wapper_conten_xephang:hover:before {
+  height: 80%; }
+
 .loader {
   width: 50px;
   height: 50px;
