--- a/public/style/Layout/_home.scss
+++ b/public/style/Layout/_home.scss
@@ -105,7 +105,7 @@ body {
     transition: 0.5s;
     top: 0;
     right: 0;
-    left: -310;
+    left: -760px;
     z-index: 1030;
     text-align: center;
     font-size: 17px; }
@@ -237,6 +237,7 @@ body {
   position: relative;
   img{
   	height: 318px;
+  	border-radius: 3px;
   }
 }
 .item i {
@@ -283,6 +284,7 @@ body {
     width: 100%;
     height: 31px;
     color: aqua;
+    border-radius: 3px 0px;
   }
 }
 .item:hover:before {
@@ -321,6 +323,7 @@ body {
 	img{
 		width: 100%;
 		height: 300px;
+		border-radius: 3px;
 	}
 	p{
 	    top: 67%;
@@ -340,6 +343,7 @@ body {
 	    height: 31px;
 	    color: aqua;
 	    display: block;
+	    border-radius: 3px 0px;
 	  }
 }
 .wapper_conten_xephang:hover:before {
@@ -355,6 +359,20 @@ body {
 
 }
 @include responsive_md{
+	body{
+		background-color: #141414 !important;
+		.container-fluid{
+			background: #141414 !important;
+		}
+	}
+	.go_logo{
+		span{
+			color: #b6b6b6;
+		}
+	}
+	.herder_img .wapper_baner .img_baner {
+		background-image: url("https://cdn.glitch.com/facd9db4-77fe-4f7f-aaaf-98ab2956acb6%2FBangPhong.png?v=1587273184202");
+		}
 	.owl-next{
 		display: none;
 	}
@@ -363,15 +381,14 @@ body {
 	}
 	.item {
 	  img{
-	  	width: 94% !important;
-	  	height: 178px;
+	  	height: 178px !important;
 	  }
   	p{
-	  	top: 60%;
+	  	top: 60% !important;;
 	  	font-size: 14px;
 	  }
 	  b{
-	  	top: 90%;
+	  	top: 90% !important;;
 	  }
 	}
 	.owl-item{
@@ -383,29 +400,50 @@ body {
 	}
 	.wapper_conten_xephang{
 	    img {
-	    	height: 127px;
+	    	height: 127px !important;
 	    	
 		}
 		p{
-			top: 51%;
+			top: 51% !important;;
 			height: 31px;	
 			font-size: 7px;
 		}
 		b{
 			font-size: 10px;
-			padding: 0;
+			padding: 0 5px;
 			height: 15px;
 		}
 		
 
 	}
+	.wapper_conten_xephang:hover:before {
+	  height:80%;
+	}
 }
 
-.wapper_conten_xephang:hover:before {
-		  height:80%;
-		}
+
 @include responsive_lg{
     
+    .item {
+    	img {
+    		height: 219px;
+		}
+		p{
+			top:62%;
+		}
+		b{
+			top: 90%;
+		}
+	}
+	.wapper_conten_xephang{
+
+		img{
+			height: 250px;
+		}
+		p{
+			top: 61%;
+		}
+	}
 }
 @include responsive_xl{}
 
