--- a/public/style/Layout/_home.scss
+++ b/public/style/Layout/_home.scss
@@ -473,7 +473,7 @@ body {
   left: 0; }
 
 .loader-black {
-  background-color: #333; }
+  background-color: #a2b8b1; }
 
 .loader-1 {
   animation-name: loader1;
