--- a/views/pageXepHang/XepHangPage.pug
+++ b/views/pageXepHang/XepHangPage.pug
@@ -34,35 +34,19 @@ block conten
 		.container-fluid(style="background:#f7f9fb; padding-top:48px;")
 			.row
 				.col-12
-					.wapper_header
-						.row
-							div.col-xs-12.col-sm-12.col-md-12.col-lg-12.col-12-custom
-								div.row
-									.go_logo
-										i.fab.fa-neos 
-										span Moi cap nhat
-									.owl-carousel
-										each posts in db
-											a(href=`/post/${posts.id}`)
-												.item
-													img(src=posts.imageHome)
-													p=posts.nameHome
-													b=posts.chapHome
-													i.fa.fa-play(aria-hidden='true')
 		.waper_xephang
 			.row.custom_row
 				.go_logo
 					i.fab.fa-hotjar
 					span Bang xep hang
-					span(style="float:right")
-						a(href="/bangxephang") Xem tat ca
-				each posts in homeXephang.slice(16,24)
-					.col-3.col-12-custom
+				each posts in homeXephang.reverse()
+					div.col-xs-12.col-sm-12.col-md-3.col-lg-3.col-12-custom
 						a(href=`/post/xephang/${posts.id}`)
 							.wapper_conten_xephang
-								img(src=posts.imageHome)
-								p=posts.nameHome
-									b=posts.chapHome
+								.should
+									img(src=posts.imageHome)
+									p(style="width:50%")=posts.nameHome
+										b=posts.chapHome
 
 										
 
@@ -109,41 +93,3 @@ block conten
 			}
 			showMeau();
 			setTimeout(reload, 500);
-			$(".owl-carousel").owlCarousel({
-			  autoplay: true,
-			  autoplayTimeout: 5000,
-			  autoplayHoverPause: true,
-			  loop: true,
-			  margin: 50,
-			  responsiveClass: true,
-			  nav: true,
-			  loop: true,
-			  stagePadding: 100,
-			  responsive: {
-			    0: {
-			      items: 1
-			    },
-			    568: {
-			      items: 2
-			    },
-			    600: {
-			      items: 3
-			    },
-			    1000: {
-			      items: 3
-			    }
-			  }
-			});
-			$(document).ready(function () {
-			  $(".popup-youtube").magnificPopup({
-			    disableOn: 320,
-			    type: "iframe",
-			    mainClass: "mfp-fade",
-			    removalDelay: 160,
-			    preloader: false,
-			    fixedContentPos: true
-			  });
-			});
-			$(".item").magnificPopup({
-			  delegate: "a"
-			});
